--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,32 +5,31 @@ services:
   web:
 
     build: .
-    container_name: drf_app
+    container_name: project_app
     volumes:
       - ./src:/drf
 
     ports:
-      - "9090:8000"
+      - "8080:8000"
 
     depends_on:
-      - database
+      - db
 
     links:
       - redis
 
-  database:
+
+  db:
 
     image: 'postgres:latest'
-    container_name: pgdb
     ports:
       - "5432:5432"
-    expose:
-      - '5432'
+    container_name: postgres
 
     environment:
-      POSTGRES_USER: postgres # The PostgreSQL user (useful to connect to the database)
+      POSTGRES_USER: mujtaba # The PostgreSQL user (useful to connect to the database)
       POSTGRES_PASSWORD: maz # The PostgreSQL password (useful to connect to the database)
-      POSTGRES_DB: default_database # The PostgreSQL default database (automatically created at first launch)
+      POSTGRES_DB: postgres
 
   redis:
       image: 'redis:latest'
